--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,13 +12,15 @@ dependencies:
   flutter:
     sdk: flutter
   freezed_annotation: ^2.2.0
-
+  google_fonts: ^5.0.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
   freezed: ^2.3.4
   build_runner: ^2.4.4
+  
 
 flutter:
   uses-material-design: true
