--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
   flutter_svg: ^2.0.6
   freezed_annotation: ^2.2.0
   google_fonts: ^5.0.0
