--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,6 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_svg: ^2.0.6
   freezed_annotation: ^2.2.0
-  google_fonts: ^5.0.0
   
 dev_dependencies:
   flutter_test:
@@ -23,9 +22,23 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   freezed: ^2.3.4
   build_runner: ^2.4.4
+  dart_code_metrics: ^5.7.5
+  dart_code_metrics_presets: ^1.8.0
   
 
 flutter:
   uses-material-design: true
   assets:
     - assets/icons/
+    - assets/fonts/
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: fonts/Roboto-Bold.ttf
+          weight: 700
+        - asset: fonts/Roboto-Regular.ttf
+          weight: 400
+        - asset: fonts/Roboto-Light.ttf
+          weight: 300
+        - asset: fonts/Roboto-Thin.ttf
+          weight: 100
