--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,22 +15,23 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_svg: ^2.0.6
   freezed_annotation: ^2.2.0
+  l10n_flutter: ^1.0.7
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
   freezed: ^2.3.4
-  build_runner: ^2.4.4
+  build_runner: ^2.4.5
   dart_code_metrics: ^5.7.5
   dart_code_metrics_presets: ^1.8.0
-  
 
 flutter:
   uses-material-design: true
   assets:
     - assets/icons/
     - assets/fonts/
+    - assets/l10n/
   fonts:
     - family: Roboto
       fonts:
