--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: party
-description: Flutter project
+description: Vk Mini App for search party in games
 publish_to: 'none'
 version: 0.1.0
 
@@ -15,30 +15,24 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_svg: ^2.0.6
   freezed_annotation: ^2.2.0
+  l10n_flutter: ^1.0.7
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
   freezed: ^2.3.4
-  build_runner: ^2.4.4
+  build_runner: ^2.4.5
   dart_code_metrics: ^5.7.5
   dart_code_metrics_presets: ^1.8.0
-  
 
 flutter:
   uses-material-design: true
   assets:
     - assets/icons/
     - assets/fonts/
+    - assets/l10n/
   fonts:
-    - family: Roboto
+    - family: SF-Pro
       fonts:
-        - asset: assets/fonts/Roboto-Bold.ttf
-          weight: 700
-        - asset: assets/fonts/Roboto-Regular.ttf
-          weight: 400
-        - asset: assets/fonts/Roboto-Light.ttf
-          weight: 300
-        - asset: assets/fonts/Roboto-Thin.ttf
-          weight: 100
+        - asset: assets/fonts/SF-Pro.ttf
